--- a/src/index.css
+++ b/src/index.css
@@ -136,8 +136,7 @@ img{
   height: 100%;
 }
 .aboutpic > img{
-  width: 31em;
-  padding-right: 3.5vw;
+
 }
 .aboutpic {
   margin-right: 16px;
@@ -158,6 +157,8 @@ p.about-text {
 }
 #mypic{
   float: left;
+  width: 31em;
+  padding-right: 3.5vw;
 }
 .pic{
   display: flex;
@@ -215,8 +216,8 @@ ul.sidebar{
       position: fixed;
       left: 4vw;
 }
-li > a {
-  font-size: 18px;
+    li > a {
+      font-size: 18px;
 }}
 
 @media screen and (max-width: 1024px) {
@@ -245,7 +246,7 @@ li > a {
     li > a {
       font-size: 16px;
     }
-    .aboutpic > img{
+    #mypic{
       width: 21em;
     }
   }
@@ -286,7 +287,7 @@ li > a {
     height: 30px;
   }
 
-  .aboutpic > img{
+  #mypic{
     width: 21em;
   }
   p.about-text {
@@ -322,10 +323,9 @@ li > a {
 @media screen and (max-width: 450px) {
   #mypic  { 
     margin-bottom: 1em;
-  }
-  .aboutpic > img {
     width: 240px;
-}
+  }
+
   h3{
     font-size: 14px
   }
