--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ svg {
   fill: #4b4747;
   cursor: pointer;
 }
+
 .mobile-inst{
   display: none;
 }
@@ -126,7 +127,12 @@ h3{
   cursor: default;
   margin-left: 16vw;
 }
-.copyright{
+h4{
+  font-size: 18px;
+  font-family: 'Prata', serif;
+  margin-bottom: 2em;
+}
+p{
   color: #424242;
   font-family: 'Old Standard TT', serif;
 }
@@ -135,8 +141,32 @@ img{
   width: 100%;
   height: 100%;
 }
-.aboutpic > img{
-
+.contact-info{
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  margin-left: 5em;
+}
+.contact-info > p{
+  font-size: 18px;
+}
+.contact-block{
+  display: grid;
+  grid-template-columns: 8em 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  margin-bottom: 3em;
+}
+.social > a{
+  padding: 10px;
+  margin-right: 2vw;
+}
+p > span{
+  color :rgb(104, 44, 158);
+  font-size: 20px;
+}
+.contact-block > p{
+  font-weight: 500;
+  font-size: 20px;
 }
 .aboutpic {
   margin-right: 16px;
