--- a/src/index.css
+++ b/src/index.css
@@ -372,8 +372,13 @@ ul.sidebar{
     margin-bottom: 1em;
     width: 240px;
   }
-
+  main{
+    grid-template-rows: auto;
+  }
   h3{
     font-size: 14px
+  }
+  .contact-info{
+    margin-bottom: 3em;
   }
 }
