--- a/src/index.css
+++ b/src/index.css
@@ -47,14 +47,16 @@ main {
 .gallery{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(18vw, 1fr));
-  grid-template-rows: repeat(3, 35vh);
+  grid-template-rows: repeat(3, minmax(auto, 35vh));
   grid-row-gap: 0.9em;
   grid-column-gap: 0.9em;
   padding: 1em;
   margin-right: 1vw;
   grid-column: 2;
 }
-
+.gallery-20{
+  grid-template-rows: repeat(20, minmax(auto, 35vh));
+}
 nav{
   position: fixed;
   left: 2.5vw;
@@ -90,12 +92,7 @@ nav > ul > li :hover{
 nav > ul > li :focus{
   text-decoration: underline;
 }
-.pic-6{
-  grid-column: 2/4;
-}
-.pic-5{
-  grid-row: 2/4;
-}
+
 footer{
   grid-column: 1/5;
   margin: 2vw 2vw 0 2vw;
@@ -209,6 +206,12 @@ p.about-text {
   cursor: pointer;
   opacity: 0.7;
 }
+.pic-6{
+  grid-column: span 2;
+}
+.pic-5{
+  grid-row: span 2;
+}
 .sidebar-off{
   display: none;
 }
@@ -297,7 +300,7 @@ ul.sidebar{
   }
   @media screen and (aspect-ratio: 1280/800 ){
     .gallery{
-      grid-template-rows: repeat(3, 35vh);
+      grid-template-rows: repeat(20, 35vh);
     }
   }
   @media screen and (max-width: 750px) {
